--- a/crm/main.html
+++ b/crm/main.html
@@ -12,12 +12,12 @@
                 style="max-width: 600px; border-collapse: collapse; border: 0px none; border-spacing: 0px; text-align: left;">
                 <tbody>
                   <tr>
+
                     <td style="padding: 40px 0px 0px;">
-                    
                       <div style="padding: 20px; background-color: rgb(255, 255, 255); overflow-x: auto;">
                         <div style="color: rgb(0, 0, 0); text-align: left;">
                           <h1 style="margin: 1rem 0">Verification code</h1>
-                          <p style="padding-bottom: 16px">Please use the verification code below to sign in.</p>
+                          <p style="padding-bottom: 16px">Please use the verification code below to Sign in.</p>
                           <p style="padding-bottom: 16px"><strong style="font-size: 150%; font-weight: 600;">${otpCode}</strong></p>
                           <p style="padding-bottom: 16px">If you didn't request this, you can ignore this email.</p>
                           <p style="padding-bottom: 16px">Thank You,<br>for choosing CRM Billing System</p>
